# Portfolio-Optimizer

./: .env  .gitignore  .travis.yml  CHANGELOG.md  LICENSE.md  README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  Pipfile  example-portfolio.json  gunicorn_config.py  processor.py  setup.cfg  start_server.py
backend/server/: app.py  config.py  make_celery.py
backend/server/api/: __init__.py  admin.py  optimize.py  prices.py  rest_models.py  user.py
backend/server/db/: __init__.py  connect.py  portfolios.py  user.py
backend/server/optimizer/: optimize.py  prep_data.py  returns.py
backend/server/shared/: auth.py
backend/server/tasks/: optimize.py
backend/tests/: test_areturns.py  test_optimize.py  test_prep_data.py
frontend/: .stylelintrc.json  Dockerfile  README.md  angular.json  package-lock.json  package.json  proxy.conf.json  tslint.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.module.ts
frontend/src/app/admin/: admin.module.ts  admin.routing.ts  admin.service.ts
frontend/src/app/dashboard/: dashboard.module.ts  dashboard.routes.ts  dashboard.service.ts
frontend/src/app/global/: global-vars.ts  global.module.ts
frontend/src/app/models/: api.ts  celery.ts  optimize.ts  portfolio.ts  price.ts  user.ts
frontend/src/app/user/: user.module.ts  user.routes.ts
frontend/src/assets/images/: sources.txt
frontend/src/styles/: main.scss
frontend/static-html/: build-in-progress.html
gateway/: default.conf
(+88 files in other folders)
