[metadata]
name = Portfolio Optimizer
version = 0.0.1
author = Jason Tucker
home-page = https://github.com/jtucke2/Portfolio-Optimizer
description = Optimizer portfolio of financial assets
long-description = file: README.md
license = MIT
license-file = COPYING

[pycodestyle]
ignore = W605
max-line-length = 160
